overflow fix

--- a/components/background/background.module.less
+++ b/components/background/background.module.less
@@ -6,9 +6,9 @@
 .container {
     position: absolute;
     top: 0px;
-    z-index: -5;
+    z-index: -1;
     filter: blur(7px);
-    max-height: 1vh;
+    
 }
 
 
