--- a/styles/globals.less
+++ b/styles/globals.less
@@ -14,5 +14,6 @@ body {
     font-family: FiraCode;
     text-shadow: 1px 2px black;
     background-color: @background;
-    color:@text
+    color:@text;
+    overflow-x: hidden
 }
